--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '3'
 
 services:
-  go:
+  app:
     build: .
+    working_dir: $PWD
     volumes:
-      - ./:/go/src/app
+      - /var/run/docker.sock:/var/run/docker.sock
+      - $PWD:$PWD
     ports:
-      - '8080:8080'
+      - '3000:3000'
     tty: true
