--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3'
 services:
   app:
     build: .
-    working_dir: $PWD
+    # working_dir: $PWD
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - $PWD:$PWD
+      - .:/var/task
     ports:
       - '3000:3000'
     tty: true
